--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ color:
 #B4FAE3
 #ADD1FF
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2? family= Faster+One & family= Modak & family= Rubik+Spray+Paint & display=swap');
 @import url('https://fonts.googleapis.com/css2? family= Faster+One & family= Rubik+Spray+Paint & display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap');
@@ -19,19 +21,36 @@ color:
     --cor7: #FFFFFF;
     --cor8: #CEF7FA;
     --fonte1: font-family: 'Bebas Neue', sans-serif;
-    font-family: 'Patua One', cursive 'Roboto Condensed', sans-serif 'Yeseva One', cursive;
-    --fonte2:
+    --fonte2: font-family: 'Patua One', cursive 'Roboto Condensed', sans-serif 'Yeseva One', cursive;
+    --font3: font-family: 'Bebas Neue', sans-serif, font-family: 'Patua One', cursive, font-family: 'Roboto Condensed', sans-serif, font-family: 'Yeseva One', cursive;
 }
 
-body {
+#body {
     background-color: var(--cor8);
 }
 
-.e {
+#container {
+    max-width: 1230px;
+    margin: auto;
+    display: grid;
+    grid-template-areas: "main";
+    width: 100%;
+    height: 100vh;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+#conteudo {
+    margin-left: 200px;
+    margin-right: 100px;
+}
+
+
+#e {
     font-family: var(--fonte1);
 }
 
-.menu {
+#menu {
     width: 95%;
     list-style-type: none;
     margin: 0;
@@ -44,7 +63,7 @@ body {
     color: var(--cor4);
 }
 
-.escolha1 {
+#escolha1 {
     margin: 0;
     display: grid;
     place-content: center;
@@ -53,7 +72,7 @@ body {
     height: 200px;
 }
 
-.task {
+#task {
     padding-left: 0;
     font-size: 65px;
     width: 105%;
@@ -62,16 +81,16 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     font-family: 'Faster One', cursive;
-    font-family: 'Modak', cursive;
+    font-family: 'Modak', curconteudosive;
     font-family: 'Rubik Spray Paint', cursive;
     color: transparent;
 }
 
-.A2 {
+#A2 {
     float: right;
 }
 
-.A2 .A3 {
+#A2 #A3 {
     font-family: Arial, Helvetica, sans-serif;
     display: block;
     color: var(--cor4);
@@ -81,23 +100,80 @@ body {
     text-decoration: none;
 }
 
-.A2 .A3:hover {
+#A2 #A3:hover {
     background-color: #F2EEAC;
 }
 
 
-.container {
-    max-width: 1230px;
-    margin: auto;
-    display: grid;
-    grid-template-areas: "main";
-    width: 100%;
-    height: 100vh;
-}
 
-.banner {
+
+#banner {
     margin-top: 9px;
     padding-left: 400px;
     width: 1000px;
     height: 500px;
+    margin-bottom: 20px;
+}
+
+#card-item {
+    padding-left: 0px;
+    width: 400px;
+    height: 400px;
+    display: inline-block;
+    border-radius: 15px;
+    background-image: url("Imagens/noticias/corinthians.jpg");
+    text-decoration: none;
+}
+
+#text {
+    color: #FFFFFF;
+    font-size: 40px;
+    margin-top: 258px;
+    font-family: var(--font3);
+    background-color: rgba(0, 0, 0, 0.164);
+    border-radius: 15px;
+}
+
+#volei {
+    margin-right: 5px;
+    margin-left: 5px;
+    padding-left: 0px;
+    width: 400px;
+    height: 400px;
+    display: inline-block;
+    border-radius: 15px;
+    background-image: url("Imagens/noticias/volei.webp");
+    text-decoration: none;
+}
+
+#basquete {
+    margin-bottom: 30px;
+    padding-left: 0px;
+    width: 400px;
+    height: 400px;
+    display: inline-block;
+    border-radius: 15px;
+    background-image: url("Imagens/noticias/basquete.webp");
+    text-decoration: none;
+}
+
+#handebol {
+    padding-left: 0px;
+    width: 600px;
+    height: 400px;
+    display: inline-block;
+    border-radius: 15px;
+    background-image: url("Imagens/noticias/handebol.webp");
+    text-decoration: none;
+    padding-right: 100px;
+}
+#propa1 {
+    padding-left: 0px;
+    width: 200px;
+    height: 400px;
+    display: inline-block;
+    border-radius: 15px;
+    background-image: url("Imagens/propagandas/coca.jpeg");
+    text-decoration: none;
+    padding-right: 100px;
 }
