--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
-/*
-color:
-#04ADBF
-#038C8C
-#668C3F
-#B4FAE3
-#ADD1FF
-*/
-
+ 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Luckiest+Guy&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Patua+One&family=Roboto+Condensed:ital,wght@0,300;1,300&family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2? family= Faster+One & family= Modak & family= Rubik+Spray+Paint & display=swap');
 @import url('https://fonts.googleapis.com/css2? family= Faster+One & family= Rubik+Spray+Paint & display=swap');
@@ -23,10 +16,13 @@ color:
     --fonte1: font-family: 'Bebas Neue', sans-serif;
     --fonte2: font-family: 'Patua One', cursive 'Roboto Condensed', sans-serif 'Yeseva One', cursive;
     --font3: font-family: 'Bebas Neue', sans-serif, font-family: 'Patua One', cursive, font-family: 'Roboto Condensed', sans-serif, font-family: 'Yeseva One', cursive;
+    --fonte4: font-family: 'Bebas Neue', sans-serif, font-family: 'Luckiest Guy', cursive font-family: 'Patua One', cursive font-family: 'Roboto Condensed', sans-serif font-family: 'Yeseva One', cursive;
+
 }
 
 #body {
     background-color: var(--cor8);
+    margin: 0;
 }
 
 #container {
@@ -64,7 +60,6 @@ color:
 }
 
 #escolha1 {
-    margin: 0;
     display: grid;
     place-content: center;
     background-color: var(--cor5);
@@ -77,12 +72,10 @@ color:
     font-size: 65px;
     width: 105%;
     display: flex;
+    font-family: var(--fonte4);
     background-color: var(--cor7);
     background-clip: text;
     -webkit-background-clip: text;
-    font-family: 'Faster One', cursive;
-    font-family: 'Modak', curconteudosive;
-    font-family: 'Rubik Spray Paint', cursive;
     color: transparent;
 }
 
@@ -108,14 +101,13 @@ color:
 
 
 #banner {
-    margin-top: 9px;
     padding-left: 400px;
     width: 1000px;
     height: 500px;
     margin-bottom: 20px;
 }
 
-#card-item {
+#futebol {
     padding-left: 0px;
     width: 400px;
     height: 400px;
@@ -147,8 +139,6 @@ color:
 }
 
 #basquete {
-    margin-bottom: 30px;
-    padding-left: 0px;
     width: 400px;
     height: 400px;
     display: inline-block;
@@ -164,14 +154,24 @@ color:
     height: 400px;
     display: inline-block;
     border-radius: 15px;
-    background-image: url("Imagens/noticias/handebol.webp");
+    background-image: url("Imagens/noticias/handebol.gif");
+    background-size: 850px 500px;
     text-decoration: none;
 }
+
 #propa1 {
     width: 200px;
     height: 400px;
     display: inline-block;
-    background-image: url("Imagens/propagandas/coca.jpeg");
+    background-image: url("Imagens/propagandas/propaganda-coca.gif");
     background-size: 200px 400px;
     text-decoration: none;
+    border-radius: 15px;
+}
+
+#tlt {
+    font: var(--fonte2);
+    font-size: 80px;
+    color: #000000;
+    text-align: center;
 }
