--- a/style.css
+++ b/style.css
@@ -175,3 +175,12 @@
      color: #000000;
      text-align: center;
  }
+
+ #rodap{
+    display: grid;
+    place-content: center;
+    background-color: var(--cor5);
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+}
