--- a/style.css
+++ b/style.css
@@ -127,23 +127,23 @@
  }
 
  #volêi {
-     margin-right: 5px;
-     margin-left: 5px;
      padding-left: 0px;
-     width: 400px;
+     width: 600px;
      height: 400px;
      display: inline-block;
      border-radius: 15px;
      background-image: url("Imagens/noticias/volei.webp");
+     background-size: 600px 600px;
      text-decoration: none;
  }
 
  #basquete {
-     width: 400px;
+     width: 600px;
      height: 400px;
      display: inline-block;
      border-radius: 15px;
      background-image: url("Imagens/noticias/basquete.webp");
+     background-size: 600px 600px;
      text-decoration: none;
  }
 
@@ -170,17 +170,188 @@
  }
 
  #tlt {
-     font: var(--fonte5);
+     font: var(--fonte1);
      font-size: 60px;
      color: #000000;
-     text-align: center;
+     text-align: left;
  }
 
- #rodap{
-    display: grid;
-    place-content: center;
-    background-color: var(--cor3);
-    width: 100%;
-    height: 80px;
-    border-radius: 5px;
-}
+ #rodap {
+     display: grid;
+     place-content: center;
+     background-color: var(--cor3);
+     width: 100%;
+     height: 80px;
+     border-radius: 5px;
+ }
+
+ @media screen and (max-width: 856px) {
+     #body {
+         background-color: var(--cor8);
+         margin: 0;
+     }
+
+     #container {
+         max-width: 1230px;
+         margin: auto;
+         display: grid;
+         grid-template-areas: "main";
+         width: 100%;
+         height: 100vh;
+         margin-left: 100px;
+         margin-right: 100px;
+     }
+
+     #conteudo {
+         margin-left: 50px;
+         margin-right: 40px;
+     }
+
+
+     #e {
+         font-family: var(--fonte1);
+     }
+
+     #menu {
+         width: 115%;
+         list-style-type: none;
+         margin: 0;
+         overflow: hidden;
+         background-color: var(--cor3);
+         border-color: var(--cor3);
+         border-width: 2px;
+         border-style: solid;
+         border-radius: 5px;
+         color: var(--cor4);
+     }
+
+     #escolha1 {
+         display: grid;
+         place-content: center;
+         background-color: var(--cor5);
+         width: 150%;
+         height: 400px;
+     }
+
+     #task {
+         padding-left: 0;
+         font-size: 65px;
+         width: 130%;
+         display: flex;
+         font-family: var(--fonte4);
+         background-color: var(--cor7);
+         background-clip: text;
+         -webkit-background-clip: text;
+         color: transparent;
+     }
+
+     #A2 {
+         float: right;
+     }
+
+     #A2 #A3 {
+         font-family: Arial, Helvetica, sans-serif;
+         display: block;
+         color: var(--cor4);
+         /*#F2A81D;3258A6*/
+         text-align: center;
+         padding: 18px 20px;
+         text-decoration: none;
+     }
+
+     #A2 #A3:hover {
+         background-color: #F2EEAC;
+     }
+
+
+
+
+     #banner {
+         padding-left: 300px;
+         width: 700px;
+         height: 300px;
+         margin-bottom: 20px;
+     }
+
+     #futebol {
+         padding-left: 0px;
+         width: 400px;
+         height: 400px;
+         display: inline-block;
+         border-radius: 15px;
+         background-image: url("Imagens/noticias/corinthians.jpg");
+         text-decoration: none;
+     }
+
+     #text {
+         color: #FFFFFF;
+         font-size: 40px;
+         margin-top: 258px;
+         font-family: var(--font3);
+         background-color: rgba(0, 0, 0, 0.164);
+         border-radius: 15px;
+     }
+
+     #volêi {
+         padding-left: 0px;
+         width: 600px;
+         height: 400px;
+         display: inline-block;
+         border-radius: 15px;
+         background-image: url("Imagens/noticias/volei.webp");
+         background-size: 600px 600px;
+         text-decoration: none;
+     }
+
+     #basquete {
+         width: 600px;
+         height: 400px;
+         display: inline-block;
+         border-radius: 15px;
+         background-image: url("Imagens/noticias/basquete.webp");
+         background-size: 600px 600px;
+         text-decoration: none;
+     }
+
+     #handebol {
+         padding-left: 3px;
+         padding-right: 3px;
+         width: 800px;
+         height: 400px;
+         display: inline-block;
+         border-radius: 15px;
+         background-image: url("Imagens/noticias/handebol.gif");
+         background-size: 850px 500px;
+         text-decoration: none;
+     }
+
+     #propa1 {
+         width: 100px;
+         height: 300px;
+         display: inline-block;
+         background-image: url("Imagens/propagandas/propaganda-coca.gif");
+         background-size: 200px 400px;
+         text-decoration: none;
+         border-radius: 15px;
+     }
+
+     #tlt {
+         font: var(--fonte1);
+         font-size: 30px;
+         color: #000000;
+         text-align: left;
+     }
+
+     #rodap {
+         display: grid;
+         place-content: center;
+         background-color: var(--cor3);
+         width: 150%;
+         height: 50px;
+         border-radius: 5px;
+     }
+     #volei2{
+        width: 500px;
+        height: 400px;
+     }
+ }
